--- a/gemma_think.jinja
+++ b/gemma_think.jinja
@@ -11,20 +11,42 @@
         {%- set role = message['role'] -%}
     {%- endif -%}
     {{ '<start_of_turn>' + role + '\n' + (first_user_prefix if loop.first else "") }}
-    {%- if message['content'] is string -%}
-        {{ message['content'] | trim }}
-    {%- elif message['content'] is iterable -%}
-        {%- for item in message['content'] -%}
-            {%- if item['type'] == 'image' -%}
-                {{ '<start_of_image>' }}
-            {%- elif item['type'] == 'text' -%}
-                {{ item['text'] | trim }}
-            {%- endif -%}
-        {%- endfor -%}
+    {%- if message['role'] == 'assistant' -%}
+        {%- generation -%}
+        {%- if message['content'] is string -%}
+            {{ message['content'] | trim }}
+        {%- elif message['content'] is iterable -%}
+            {%- for item in message['content'] -%}
+                {%- if item['type'] == 'image' -%}
+                    {{ '<start_of_image>' }}
+                {%- elif item['type'] == 'text' -%}
+                    {{ item['text'] | trim }}
+                {%- endif -%}
+            {%- endfor -%}
+        {%- else -%}
+            {{ raise_exception("Invalid content type") }}
+        {%- endif -%}
+        {{ '<end_of_turn>' }}
+        {%- endgeneration -%}
+{{ '\n' }}
     {%- else -%}
-        {{ raise_exception("Invalid content type") }}
+        {%- if message['content'] is string -%}
+            {{ message['content'] | trim }}
+        {%- elif message['content'] is iterable -%}
+            {%- for item in message['content'] -%}
+                {%- if item['type'] == 'image' -%}
+                    {{ '<start_of_image>' }}
+                {%- elif item['type'] == 'text' -%}
+                    {{ item['text'] | trim }}
+                {%- endif -%}
+            {%- endfor -%}
+        {%- else -%}
+            {{ raise_exception("Invalid content type") }}
+        {%- endif -%}
     {%- endif -%}
-    {{ '<end_of_turn>\n' }}
+    {%- if message['role'] != 'assistant' -%}
+        {{ '<end_of_turn>\n' }}
+    {%- endif -%}
 {%- endfor -%}
 {%- if add_generation_prompt -%}
     {{'<start_of_turn>model\n<reasoning>\n'}}
