--- a/gemma_think.jinja
+++ b/gemma_think.jinja
@@ -49,5 +49,5 @@
     {%- endif -%}
 {%- endfor -%}
 {%- if add_generation_prompt -%}
-    {{'<start_of_turn>model\n<reasoning>\n'}}
+    {{'<start_of_turn>model\n'}}
 {%- endif -%}
